MS3: add new-style utils/options.h (with operators << >> and test programs)

--- a/utils/SConscript
+++ b/utils/SConscript
@@ -10,3 +10,5 @@ env.Library('utils', \
     pnm_shifter.cpp
   """))
 
+env.Program(['options_test.cpp', 'options.cpp'])
+env.Program(['options_read.cpp', 'options.cpp'])
