--- a/libgeo/SConscript
+++ b/libgeo/SConscript
@@ -2,7 +2,7 @@ Import ('env')
 le = env.Clone()
 le.Library('geo', \
     Split ("""
-	geo_enums.cpp
 	geo_convs.cpp
 	geo_data.cpp
+	geo_types.cpp
      """))
