move tests from utils to tests directory

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,3 +1,8 @@
-CPPFLAGS = -O1 -ljpeg
+CPPFLAGS = -O1
+
+all: test_types options_test options_read read_conf_test
 
 test_types: ../libgeo/geo_types.cpp
+options_test: ../utils/options.cpp
+options_read: ../utils/options.cpp
+read_conf_test: ../utils/options.cpp ../utils/read_conf.cpp
