--- a/libzn-utils/SConscript
+++ b/libzn-utils/SConscript
@@ -1,9 +1,10 @@
 Import ('env')
 env_geo = env.Clone()
 
-mapsoft_libs = Split ("geo_io geo loaders jeeps fig mp utils 2d zn fig mp")
+mapsoft_libs = Split ("zn geo_io geo loaders jeeps fig mp utils 2d")
 other_libs   = Split ("usb tiff jpeg png gd syck")
 
 env_geo.Prepend(LIBS=[mapsoft_libs,other_libs])
 
 env_geo.Program(['mapsoft_vmap.cpp', '../yaml/yaml.cpp'])
+env_geo.Program(['zn_mkfiglib.cpp', '../yaml/yaml.cpp'])
