get_print: thicker roads 0x2 and 0xb

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -9,3 +9,6 @@ read_conf_test: ../utils/options.cpp ../utils/read_conf.cpp
 gs_bbx_test: ../libfig/libfig.a ../utils/libutils.a
 
 test_mp: ../libmp/libmp.a ../utils/libutils.a
+
+LDFLAGS=-lpng -ljpeg -ltiff
+test_ptshift: ../libgeo/libgeo.a ../loaders/libloaders.a ../utils/libutils.a ../jeeps/libjeeps.a ../lib2d/lib2d.a
