--- a/doxygen.conf
+++ b/doxygen.conf
@@ -63,6 +63,10 @@ OUTPUT_LANGUAGE        = Russian
 
 USE_WINDOWS_ENCODING   = NO
 
+# Set input encoding
+
+INPUT_ENCODING = koi8
+
 # If the BRIEF_MEMBER_DESC tag is set to YES (the default) Doxygen will 
 # include brief member descriptions after the members that are listed in 
 # the file and class documentation (similar to JavaDoc). 
