add scons install rule for mapsoft_{convert,mapview}, libzn_data, convs_pt2pt

--- a/libgeo/SConscript
+++ b/libgeo/SConscript
@@ -9,3 +9,6 @@ e.Library('geo', \
 
 convs_libs=Split("geo loaders jeeps utils 2d png jpeg tiff")
 e.Program("convs_pt2pt.cpp",  LIBS=[convs_libs])
+
+env.Alias('install', '/usr/bin/')
+env.Install('/usr/bin/', 'convs_pt2pt')
