convert cnf files to utf8 for correct use with libyaml

--- a/libzn-data/hr.cnf
+++ b/libzn-data/hr.cnf
@@ -1,188 +1,188 @@
 -
-  name: деревня
+  name: п╢п╣я─п╣п╡п╫я▐
   mp:   POI 0x0700 0 0
   fig:  2 1 0 3 18 7 50 -1 -1 0.000 1 1 7 0 0 1
   txt:  4 0 0 40 -1 18 8 0.0000 4
 -
-  name: крупная деревня
+  name: п╨я─я┐п©п╫п╟я▐ п╢п╣я─п╣п╡п╫я▐
   mp:   POI 0x0800 0 0
   fig:  2 1 0 4 18 7 50 -1 -1 0.000 1 1 7 0 0 1
   txt:  4 0 0 40 -1 18 8 0.0000 4
 -
-  name: город
+  name: пЁп╬я─п╬п╢
   mp:   POI 0x0900 0 0
   fig:  2 1 0 5 18 7 50 -1 -1 0.000 1 1 7 0 0 1
   txt:  4 0 0 40 -1 18 8 0.0000 4
 -
-  name: триангуляционный знак
+  name: я┌я─п╦п╟п╫пЁя┐п╩я▐я├п╦п╬п╫п╫я▀п╧ п╥п╫п╟п╨
   mp:   POI 0x0F00 0 0
   fig:  2 1 0 2 24 7 57 -1 20 0.000 1 1 -1 0 0 1  
   pic:  trig_hr.fig
   txt:  4 0 24 40 -1 18 7 0.0000 4
 -
-  name: отметка высоты
+  name: п╬я┌п╪п╣я┌п╨п╟ п╡я▀я│п╬я┌я▀
   mp:   POI 0x1100 0 0
   fig:  2 1 0 4  24 7  57 -1 -1 0.000 0 1 -1 0 0 1 
   txt:  4 0 24 40 -1 18 7 0.0000 4
 -
-  name: маленькая отметка высоты
-  desc: взятая автоматически из srtm и т.п.
+  name: п╪п╟п╩п╣п╫я▄п╨п╟я▐ п╬я┌п╪п╣я┌п╨п╟ п╡я▀я│п╬я┌я▀
+  desc: п╡п╥я▐я┌п╟я▐ п╟п╡я┌п╬п╪п╟я┌п╦я┤п╣я│п╨п╦ п╦п╥ srtm п╦ я┌.п©.
   mp:   POI 0x0D00 0 0
   fig:  2 1 0 3 24 7  57 -1 -1 0.000 0 1 -1 0 0 1
   txt:  4 0 24 40 -1 18 6 0.0000 4
 -
-  name: отметка уреза воды
+  name: п╬я┌п╪п╣я┌п╨п╟ я┐я─п╣п╥п╟ п╡п╬п╢я▀
   mp:   POI 0x1000 0 0
   fig:  2 1 0 4  1 7  57 -1 -1 0.000 0 1 -1 0 0 1 
   txt:  4 0 1 40 -1 18 6 0.0000 4
 -
-  name: подпись лесного квартала, урочища
+  name: п©п╬п╢п©п╦я│я▄ п╩п╣я│п╫п╬пЁп╬ п╨п╡п╟я─я┌п╟п╩п╟, я┐я─п╬я┤п╦я┴п╟
   mp:   POI 0x2800 0 0
   fig:  2 1 0 4 12 7  55 -1 -1 0.000 0 1 -1 0 0 1
   txt:  4 1 0 40 -1 3 8 0.0000 4
 -
-  name: памятник
+  name: п©п╟п╪я▐я┌п╫п╦п╨
   mp:   POI 0x2c04 0 0
   fig:  2 1 0 1  4 7 157 -1 -1 0.000 0 1 -1 0 0 1 
   pic:  pam.fig
   txt:  4 0 0 40 -1 3 8 0.0000 4
 -
-  name: церковь
+  name: я├п╣я─п╨п╬п╡я▄
   mp:   POI 0x2C0B 0 0
   fig:  2 1 0 1 11 7 157 -1 -1 0.000 0 1 -1 0 0 1 
   pic:  cerkov.fig
 -
-  name: остановка автобуса
+  name: п╬я│я┌п╟п╫п╬п╡п╨п╟ п╟п╡я┌п╬п╠я┐я│п╟
   mp:   POI 0x2F08 0 0
   fig:  2 1 0 4  4 7  57 -1 -1 0.000 0 1 -1 0 0 1 
   pic:  avt.fig
 -
-  name: ж/д станция
+  name: п╤/п╢ я│я┌п╟п╫я├п╦я▐
   desc: 
   mp:   POI 0x5905 0 1
   fig:  2 1 0 4  4 7  57 -1 -1 0.000 0 0 -1 0 0 1 
   txt:  4 0 0 40 -1 3 8 0.0000 4
 -
-  name: перевал неизвестной сложности
+  name: п©п╣я─п╣п╡п╟п╩ п╫п╣п╦п╥п╡п╣я│я┌п╫п╬п╧ я│п╩п╬п╤п╫п╬я│я┌п╦
   mp:   POI 0x6406 0 0
   fig:  2 1 0 1 1 7 158 -1 -1 0.000 0 1 -1 0 0 1
   txt:  4 0 15 40 -1 18 7 0.0000 4
   pic:  per.fig
 -
-  name: перевал н/к
+  name: п©п╣я─п╣п╡п╟п╩ п╫/п╨
   mp:   POI 0x6620 0 0
   fig:  2 1 0 1 2 7 158 -1 -1 0.000 0 1 -1 0 0 1
   txt:  4 0 15 40 -1 18 7 0.0000 4
   pic:  pernk.fig
 -
-  name: перевал 1А
+  name: п©п╣я─п╣п╡п╟п╩ 1п░
   mp:   POI 0x6621 0 0
   fig:  2 1 0 1 3 7 158 -1 -1 0.000 0 1 -1 0 0 1
   txt:  4 0 15 40 -1 18 7 0.0000 4
   pic:  per1a.fig
 -
-  name: перевал 1Б
+  name: п©п╣я─п╣п╡п╟п╩ 1п▒
   mp:   POI 0x6622 0 0
   fig:  2 1 0 1 4 7 158 -1 -1 0.000 0 1 -1 0 0 1
   txt:  4 0 15 40 -1 18 7 0.0000 4
   pic:  per1b.fig
 -
-  name: перевал 2А
+  name: п©п╣я─п╣п╡п╟п╩ 2п░
   mp:   POI 0x6623 0 0
   fig:  2 1 0 1 5 7 158 -1 -1 0.000 0 1 -1 0 0 1
   txt:  4 0 15 40 -1 18 7 0.0000 4
   pic:  per2a.fig
 -
-  name: перевал 2Б
+  name: п©п╣я─п╣п╡п╟п╩ 2п▒
   mp:   POI 0x6624 0 0
   fig:  2 1 0 1 6 7 158 -1 -1 0.000 0 1 -1 0 0 1
   txt:  4 0 15 40 -1 18 7 0.0000 4
   pic:  per2b.fig
 -
-  name: перевал 3А
+  name: п©п╣я─п╣п╡п╟п╩ 3п░
   mp:   POI 0x6625 0 0
   fig:  2 1 0 1 7 7 158 -1 -1 0.000 0 1 -1 0 0 1
   txt:  4 0 15 40 -1 18 7 0.0000 4
   pic:  per3a.fig
 -
-  name: перевал 3Б
+  name: п©п╣я─п╣п╡п╟п╩ 3п▒
   mp:   POI 0x6626 0 0
   fig:  2 1 0 1 8 7 158 -1 -1 0.000 0 1 -1 0 0 1
   txt:  4 0 15 40 -1 18 7 0.0000 4
   pic:  per3b.fig
 -
-  name: каньон
+  name: п╨п╟п╫я▄п╬п╫
   mp:   POI 0x660B 0 0
   fig:  2 1 0 1 9 7 158 -1 -1 0.000 0 1 -1 0 0 1
   txt:  4 0 24 40 -1 18 7 0.0000 4
   pic:  kan.fig
 -
-  name: ледопад
+  name: п╩п╣п╢п╬п©п╟п╢
   mp:   POI 0x650A 0 0
   fig:  2 1 0 1 10 7 158 -1 -1 0.000 0 1 -1 0 0 1
   txt:  4 0 1 40 -1 3 7 0.0000 4
   pic:  ldp.fig
 -
-  name: дом
+  name: п╢п╬п╪
   mp:   POI 0x6402 0 1
   fig:  2 1 0 4  0 7  57 -1 -1 0.000 0 0 -1 0 0 1 
   txt:  4 0 0 40 -1 3 8 0.0000 4
 -
-  name: кладбище
+  name: п╨п╩п╟п╢п╠п╦я┴п╣
   mp:   POI 0x6403 0 1
   fig:  2 1 0 1 12 7 157 -1 -1 0.000 0 1 -1 0 0 1 
   pic:  kladb.fig
 -
-  name: башня
+  name: п╠п╟я┬п╫я▐
   mp:   POI 0x6411 0 0
   fig:  2 1 0 1  5 7 157 -1 -1 0.000 0 1 -1 0 0 1 
   pic:  bash.fig
 -
-  name: родник
+  name: я─п╬п╢п╫п╦п╨
   mp:   POI 0x6414 0 0
   fig:  2 1 0 4 22046463 7  57 -1 -1 0.000 0 1 -1 0 0 1 
   txt:  4 0 1 40 -1 3 8 0.0000 4
 -
-  name: развалины
+  name: я─п╟п╥п╡п╟п╩п╦п╫я▀
   mp:   POI 0x6415 0 1
   fig:  2 1 0 1 0 7  156 -1 -1 0.000 0 1 -1 0 0 1 
   txt:  4 0 0 40 -1 3 8 0.0000 4
   pic:  razv.fig
 -
-  name: шахты
+  name: я┬п╟я┘я┌я▀
   mp:   POI 0x640C 0 1
   fig:  2 1 0 1 0 7  155 -1 -1 0.000 0 1 -1 0 0 1 
   txt:  4 0 0 40 -1 3 8 0.0000 4
   pic:  shaht.fig
 -
-  name: водопад
+  name: п╡п╬п╢п╬п©п╟п╢
   mp:   POI 0x6508 0 0
   fig:  2 1 0 4 17 7  57 -1 -1 0.000 0 0 -1 0 0 1 
   txt:  4 0 1 40 -1 3 8 0.0000 4
 -
-  name: порог
+  name: п©п╬я─п╬пЁ
   mp:   POI 0x650E 0 0
   fig:  2 1 0 4  8 7  57 -1 -1 0.000 0 0 -1 0 0 1 
   txt:  4 0 1 40 -1 3 8 0.0000 4
 -
-  name: яма
+  name: я▐п╪п╟
   mp:   POI 0x6603 0 0
   fig:  2 1 0 1 25 7 157 -1 -1 0.000 0 1 -1 0 0 1 
   pic:  yama.fig
   txt:  4 0 26 40 -1 3 8 0.0000 4
 -
-  name: охотничья вышка, кормушка и т.п.
+  name: п╬я┘п╬я┌п╫п╦я┤я▄я▐ п╡я▀я┬п╨п╟, п╨п╬я─п╪я┐я┬п╨п╟ п╦ я┌.п©.
   mp:   POI 0x6606 0 0
   fig:  2 1 0 1  6 7 157 -1 -1 0.000 0 1 -1 0 0 1 
   pic:  ohotn.fig
 -
-  name: курган
+  name: п╨я┐я─пЁп╟п╫
   mp:   POI 0x6613 0 0
   fig:  2 1 0 1 26 7 157 -1 -1 0.000 0 1 -1 0 0 1 
   pic:  pupyr.fig
   txt:  4 0 26 40 -1 3 8 0.0000 4
 -
-  name: скала-останец
+  name: я│п╨п╟п╩п╟-п╬я│я┌п╟п╫п╣я├
   mp:   POI 0x6616 0 0
   fig:  2 1 0 1 20 7 157 -1 -1 0.000 0 1 -1 0 0 1
   pic:  skala.fig
@@ -190,110 +190,110 @@
 
 
 -
-  name: лес
+  name: п╩п╣я│
   desc: 
   mp:   POLYGON 0x16 0 1
   fig:  2 3 0 0 12 27983786 100 -1 20 0.000 0 1 -1 0 0 0
 -
-  name: поле
+  name: п©п╬п╩п╣
   desc: 
   mp:   POLYGON 0x52 0 1
   fig:  2 3 0 0 12 27983786  99 -1 40 0.000 0 1 -1 0 0 0
 -
-  name: свежая вырубка
+  name: я│п╡п╣п╤п╟я▐ п╡я▀я─я┐п╠п╨п╟
   desc: 
   mp:   POLYGON 0x4F 0 1
   fig:  2 3 0 0 12  7  98 -1 43 0.000 0 0 -1 0 0 0
   txt:  4 1 0 40 -1 3 8 0.0000 4
 -
-  name: стар.вырубка
+  name: я│я┌п╟я─.п╡я▀я─я┐п╠п╨п╟
   desc: 
   mp:   POLYGON 0x50 0 1
   fig:  2 3 0 0 12 27983786  98 -1 43 0.000 0 0 -1 0 0 0
   txt:  4 1 0 40 -1 3 8 0.0000 4
 -
-  name: редколесье
+  name: я─п╣п╢п╨п╬п╩п╣я│я▄п╣
   desc: 
   mp:   POLYGON 0x14 0 1
   fig:  2 3 0 0 27983786  7  98 -1 43 0.000 0 0 -1 0 0 0
 -
-  name: остров леса
+  name: п╬я│я┌я─п╬п╡ п╩п╣я│п╟
   desc: 
   mp:   POLYGON 0x15 0 1
   fig:  2 3 0 0 12 27983786  97 -1 20 0.000 0 1 -1 0 0 0
 -
-  name: закрытые территории
+  name: п╥п╟п╨я─я▀я┌я▀п╣ я┌п╣я─я─п╦я┌п╬я─п╦п╦
   desc: 
   mp:   POLYGON 0x04 0 1
   fig:  2 3 0 1  0  7  95 -1 15 0.000 0 0 -1 0 0 0
   txt:  4 0 0 40 -1 3 8 0.0000 4
 -
-  name: деревни
+  name: п╢п╣я─п╣п╡п╫п╦
   desc: 
   mp:   POLYGON 0x0E 0 1
   fig:  2 3 0 1  0 27  94 -1 20 0.000 0 0 -1 0 0 0
   txt:  4 0 0 40 -1 18 8 0.0000 4
 -
-  name: города
+  name: пЁп╬я─п╬п╢п╟
   desc: 
   mp:   POLYGON 0x01 0 2
   fig:  2 3 0 1  0 27  94 -1 15 0.000 0 0 -1 0 0 0
   txt:  4 0 0 40 -1 18 8 0.0000 4
 -
-  name: дачи, сад.уч., д/о, п/л
+  name: п╢п╟я┤п╦, я│п╟п╢.я┐я┤., п╢/п╬, п©/п╩
   desc: 
   mp:   POLYGON 0x4E 0 1
   fig:  2 3 0 1  0 27983786  93 -1 10 0.000 0 0 -1 0 0 0
   txt:  4 0 0 40 -1 3 8 0.0000 4
 -
-  name: кладбище
+  name: п╨п╩п╟п╢п╠п╦я┴п╣
   desc: 
   mp:   POLYGON 0x1A 0 1
   fig:  2 3 0 1  0 27983786  92 -1  5 0.000 0 0 -1 0 0 0
 -
-  name: водоемы
+  name: п╡п╬п╢п╬п╣п╪я▀
   desc: 
   mp:   POLYGON 0x29 0 1
   fig:  2 3 0 1 22046463  11  85 -1 20 0.000 0 0 -1 0 0 0
   txt:  4 1 1 40 -1 3 8 0.0000 4
 -
-  name: крупные водоемы
+  name: п╨я─я┐п©п╫я▀п╣ п╡п╬п╢п╬п╣п╪я▀
   desc: 
   mp:   POLYGON 0x3B 0 2
   fig:  2 3 0 1 22046463  11  85 -1 15 0.000 0 0 -1 0 0 0
   txt:  4 1 1 40 -1 3 8 0.0000 4
 -
-  name: остров
+  name: п╬я│я┌я─п╬п╡
   desc: 
   mp:   POLYGON 0x53 0 1
   fig:  2 3 0 1 22046463  3  84 -1 40 0.000 0 0 -1 0 0 0
   txt:  4 0 0 40 -1 3 8 0.0000 4
 -
-  name: заболоченность
+  name: п╥п╟п╠п╬п╩п╬я┤п╣п╫п╫п╬я│я┌я▄
   desc:
   mp:   POLYGON 0x51 0 1
   fig:  2 3 0 0 22046463 11 87 -1 49 0.000 0 0 -1 0 0 0
   txt:  4 1 0 40 -1 3 8 0.0000 4
 -
-  name: болото
+  name: п╠п╬п╩п╬я┌п╬
   desc:
   mp:   POLYGON 0x4C 0 1
   fig:  2 3 0 0 11 22046463 87 -1 49 0.000 0 0 -1 0 0 0
   txt:  4 1 0 40 -1 3 8 0.0000 4
 -
-  name: ледник
+  name: п╩п╣п╢п╫п╦п╨
   desc: 
   mp:   POLYGON 0x4D 0 1
   fig:  2 3 0 0 11 11 98 -1 35 0.000 0 0 7 0 0 1
   txt:  4 1 1 40 -1 3 8 0.0000 4
 -
-  name: крутой склон
+  name: п╨я─я┐я┌п╬п╧ я│п╨п╩п╬п╫
   desc:
   mp:   POLYGON 0x19 0 1
   fig:  2 3 0 0 0 24 91 -1 20 0.000 0 0 -1 0 0 0
   txt:  4 1 0 40 -1 3 8 0.0000 4
 -
-  name: дырка в srtm-данных
+  name: п╢я▀я─п╨п╟ п╡ srtm-п╢п╟п╫п╫я▀я┘
   desc:
   mp:   POLYGON 0xA 0 1
   fig:  2 3 0 0 0 4 110 -1 20 0.000 0 0 -1 0 0 0
@@ -301,221 +301,221 @@
 
 
 -
-  name: отличный путь
+  name: п╬я┌п╩п╦я┤п╫я▀п╧ п©я┐я┌я▄
   desc:
   mp:   POLYLINE 0x35 0 0
   fig:  2 1 0 3 31 7 88 -1 -1 6.000 0 2 -1 0 0 0
 -
-  name: хороший путь
+  name: я┘п╬я─п╬я┬п╦п╧ п©я┐я┌я▄
   desc:
   mp:   POLYLINE 0x34 0 0
   fig:  2 1 2 3 31 7 88 -1 -1 6.000 0 2 -1 0 0 0
 -
-  name: удовлетворительный путь
+  name: я┐п╢п╬п╡п╩п╣я┌п╡п╬я─п╦я┌п╣п╩я▄п╫я▀п╧ п©я┐я┌я▄
   desc:
   mp:   POLYLINE 0x33 0 0
   fig:  2 1 2 3 13 7 88 -1 -1 6.000 0 2 -1 0 0 0
 -
-  name: плохой путь
+  name: п©п╩п╬я┘п╬п╧ п©я┐я┌я▄
   desc:
   mp:   POLYLINE 0x32 0 0
   fig:  2 1 0 3 13 7 88 -1 -1 6.000 0 2 -1 0 0 0
 
 -
-  name: кривая надпись
+  name: п╨я─п╦п╡п╟я▐ п╫п╟п╢п©п╦я│я▄
   desc: 
   mp:   POLYLINE 0x00 0 0
   fig:  2 1 0 4  1 7 55 -1 -1 0.000 0 0 0 0 0 0
 -
-  name: автомагистраль
+  name: п╟п╡я┌п╬п╪п╟пЁп╦я│я┌я─п╟п╩я▄
   desc: 
   mp:   POLYLINE 0x01 0 2
   fig:  2 1 0 7 20987968 27 80 -1 -1 0.000 1 0 0 0 0 0
 -
-  name: большое шоссе
+  name: п╠п╬п╩я▄я┬п╬п╣ я┬п╬я│я│п╣
   desc: 
   mp:   POLYLINE 0x0B 0 2
   fig:  2 1 0 5 20987968 27 80 -1 -1 0.000 1 0 0 0 0 0
 -
-  name: шоссе
+  name: я┬п╬я│я│п╣
   desc: 
   mp:   POLYLINE 0x02 0 2
   fig:  2 1 0 4 20987968 27 80 -1 -1 0.000 1 0 0 0 0 0
 -
-  name: верхний край обрыва
+  name: п╡п╣я─я┘п╫п╦п╧ п╨я─п╟п╧ п╬п╠я─я▀п╡п╟
   desc: 
   mp:   POLYLINE 0x03 0 0
   fig:  2 1 0 1 18 7 79 -1 -1 0.000 1 1 7 0 0 0
 -
-  name: проезжий грейдер
+  name: п©я─п╬п╣п╥п╤п╦п╧ пЁя─п╣п╧п╢п╣я─
   desc: 
   mp:   POLYLINE 0x04 0 1
   fig:  2 1 0 3 20987968 7 80 -1 -1 0.000 1 0 0 0 0 0
 -
-  name: отдельные строения
+  name: п╬я┌п╢п╣п╩я▄п╫я▀п╣ я│я┌я─п╬п╣п╫п╦я▐
   desc: 
   mp:   POLYLINE 0x05 0 1
   fig:  2 1 0 3  0 7 81 -1 -1 0.000 0 0 0 0 0 0
   txt:  4 0 0 40 -1 3 8 0.0000 4
 -
-  name: проезжая грунтовка
+  name: п©я─п╬п╣п╥п╤п╟я▐ пЁя─я┐п╫я┌п╬п╡п╨п╟
   desc: 
   mp:   POLYLINE 0x06 0 1
   fig:  2 1 0 1  0 7 80 -1 -1 0.000 1 0 0 0 0 0
 -
-  name: непроезжий грейдер
+  name: п╫п╣п©я─п╬п╣п╥п╤п╦п╧ пЁя─п╣п╧п╢п╣я─
   desc: 
   mp:   POLYLINE 0x07 0 1
   fig:  2 1 1 3 20987968 7 80 -1 -1 4.000 1 2 0 0 0 0
 -
-  name: мост-1 (пешеходный)
+  name: п╪п╬я│я┌-1 (п©п╣я┬п╣я┘п╬п╢п╫я▀п╧)
   desc: 
   mp:   POLYLINE 0x08 0 1
   fig:  2 1 0 1  7 7 77 -1 -1 0.000 0 0 0 0 0 0
   txt:  4 0 0 40 -1 3 8 0.0000 4
 -
-  name: мост-2 (автомобильный)
+  name: п╪п╬я│я┌-2 (п╟п╡я┌п╬п╪п╬п╠п╦п╩я▄п╫я▀п╧)
   desc: 
   mp:   POLYLINE 0x09 0 1
   fig:  2 1 0 2  7 7 77 -1 -1 0.000 0 0 0 0 0 0
   txt:  4 0 0 40 -1 3 8 0.0000 4
 -
-  name: мост-5 (на автомагистралях)
+  name: п╪п╬я│я┌-5 (п╫п╟ п╟п╡я┌п╬п╪п╟пЁп╦я│я┌я─п╟п╩я▐я┘)
   desc: 
   mp:   POLYLINE 0x0E 0 1
   fig:  2 1 0 5  7 7 77 -1 -1 0.000 0 0 0 0 0 0
   txt:  4 0 0 40 -1 3 8 0.0000 4
 -
-  name: непроезжая грунтовка
+  name: п╫п╣п©я─п╬п╣п╥п╤п╟я▐ пЁя─я┐п╫я┌п╬п╡п╨п╟
   desc: 
   mp:   POLYLINE 0x0A 0 1
   fig:  2 1 0 1 20987968 7 80 -1 -1 0.000 1 0 0 0 0 0
 -
-  name: хребет
+  name: я┘я─п╣п╠п╣я┌
   desc: 
   mp:   POLYLINE 0x0C 0 1
   fig:  2 1 0 2 26 7 89 -1 -1 0.000 1 1 0 0 0 0
 -
-  name: пересыхающий ручей
+  name: п©п╣я─п╣я│я▀я┘п╟я▌я┴п╦п╧ я─я┐я┤п╣п╧
   desc: 
   mp:   POLYLINE 0x26 0 0
   fig:  2 1 1 1 22046463 7 86 -1 -1 4.000 1 1 0 0 0 0
   txt:  4 1 1 40 -1 3 8 0.0000 4
 -
-  name: река-1
+  name: я─п╣п╨п╟-1
   desc: 
   mp:   POLYLINE 0x15 0 1
   fig:  2 1 0 1 22046463 11 86 -1 -1 0.000 1 1 0 0 0 0
   txt:  4 1 1 40 -1 3 8 0.0000 4
 -
-  name: река-2
+  name: я─п╣п╨п╟-2
   desc: 
   mp:   POLYLINE 0x18 0 2
   fig:  2 1 0 2 22046463 11 86 -1 -1 0.000 1 1 0 0 0 0
   txt:  4 1 1 40 -1 3 8 0.0000 4
 -
-  name: река-3
+  name: я─п╣п╨п╟-3
   desc: 
   mp:   POLYLINE 0x1F 0 2
   fig:  2 1 0 3 22046463 11 86 -1 -1 0.000 1 1 0 0 0 0
   txt:  4 1 1 40 -1 3 8 0.0000 4
 -
-  name: просека
+  name: п©я─п╬я│п╣п╨п╟
   desc: 
   mp:   POLYLINE 0x16 0 1
   fig:  2 1 1 1  0 7 80 -1 -1 4.000 1 2 0 0 0 0
 -
-  name: забор
+  name: п╥п╟п╠п╬я─
   desc: 
   mp:   POLYLINE 0x19 0 0
   fig:  2 1 0 1 20 7 81 -1 -1 0.000 0 0 0 1 0 0 0 0 2.00 90.00 90.00
 -
-  name: маленькая ЛЭП
+  name: п╪п╟п╩п╣п╫я▄п╨п╟я▐ п⌡п╜п÷
   desc: 
   mp:   POLYLINE 0x1A 0 0
   fig:  2 1 0 2 25725064 7 83 -1 -1 0.000 1 0 0 0 0 0
 -
-  name: пешеходный тоннель
+  name: п©п╣я┬п╣я┘п╬п╢п╫я▀п╧ я┌п╬п╫п╫п╣п╩я▄
   desc: 
   mp:   POLYLINE 0x1B 0 0
   fig:  2 1 0 1  3 7 77 -1 -1 0.000 0 0 0 0 0 0
 -
-  name: просека широкая
+  name: п©я─п╬я│п╣п╨п╟ я┬п╦я─п╬п╨п╟я▐
   desc: 
   mp:   POLYLINE 0x1C 0 1
   fig:  2 1 1 2  0 7 80 -1 -1 6.000 1 2 0 0 0 0
 -
-  name: граница областей
+  name: пЁя─п╟п╫п╦я├п╟ п╬п╠п╩п╟я│я┌п╣п╧
   desc: 
   mp:   POLYLINE 0x1D 0 2
   fig:  2 1 3 1  18 7 80 -1 -1 4.000 0 1 0 0 0 0
 -
-  name: граница областей
+  name: пЁя─п╟п╫п╦я├п╟ п╬п╠п╩п╟я│я┌п╣п╧
   desc: 
   mp:   POLYLINE 0x1D 0 2
   fig:  2 1 3 1  0 7 80 -1 -1 4.000 0 1 0 0 0 0
 -
-  name: нижний край обрыва
+  name: п╫п╦п╤п╫п╦п╧ п╨я─п╟п╧ п╬п╠я─я▀п╡п╟
   desc: 
   mp:   POLYLINE 0x1E 0 0
   fig:  2 1 2 1 18 7 79 -1 -1 2.000 1 1 7 0 0 0
 -
-  name: пунктирная горизонталь
+  name: п©я┐п╫п╨я┌п╦я─п╫п╟я▐ пЁп╬я─п╦п╥п╬п╫я┌п╟п╩я▄
   desc: 
   mp:   POLYLINE 0x20 0 0
   fig:  2 1 1 1 30453904 7 90 -1 -1 4.000 1 1 0 0 0 0
 -
-  name: горизонтали, бергштрихи
+  name: пЁп╬я─п╦п╥п╬п╫я┌п╟п╩п╦, п╠п╣я─пЁя┬я┌я─п╦я┘п╦
   desc: 
   mp:   POLYLINE 0x21 0 0
   fig:  2 1 0 1 30453904 7 90 -1 -1 0.000 1 1 0 0 0 0
 -
-  name: жирная горизонталь
+  name: п╤п╦я─п╫п╟я▐ пЁп╬я─п╦п╥п╬п╫я┌п╟п╩я▄
   desc: 
   mp:   POLYLINE 0x22 0 0
   fig:  2 1 0 2 30453904 7 90 -1 -1 0.000 1 1 0 0 0 0
 -
-  name: контур леса
+  name: п╨п╬п╫я┌я┐я─ п╩п╣я│п╟
   desc: 
   mp:   POLYLINE 0x23 0 0
   fig:  2 1 2 1 12 7 96 -1 -1 2.000 1 1 0 0 0 0
 -
-  name: болото
+  name: п╠п╬п╩п╬я┌п╬
   desc: 
   mp:   POLYLINE 0x24 0 0
   fig:  2 1 0 1 22046463 7 87 -1 -1 0.000 0 1 0 0 0 0
 -
-  name: овраг
+  name: п╬п╡я─п╟пЁ
   desc: 
   mp:   POLYLINE 0x25 0 0
   fig:  2 1 0 2 25 7 89 -1 -1 0.000 1 1 0 0 0 0
 -
-  name: УЖД
+  name: пёп√п■
   desc: 
   mp:   POLYLINE 0x0D 0 2
   fig:  2 1 0 3  0 7 80 -1 -1 0.000 1 0 0 0 0 0
 -
-  name: железная дорога
+  name: п╤п╣п╩п╣п╥п╫п╟я▐ п╢п╬я─п╬пЁп╟
   desc: 
   mp:   POLYLINE 0x27 0 2
   fig:  2 1 0 4  0 7 80 -1 -1 0.000 1 0 0 0 0 0
 -
-  name: газопровод
+  name: пЁп╟п╥п╬п©я─п╬п╡п╬п╢
   desc: 
   mp:   POLYLINE 0x28 0 1
   fig:  2 1 1 3 25725064 7 83 -1 -1 4.000 1 2 0 0 0 0
 -
-  name: ЛЭП
+  name: п⌡п╜п÷
   desc: 
   mp:   POLYLINE 0x29 0 1
   fig:  2 1 0 3 25725064 7 83 -1 -1 0.000 1 0 0 0 0 0
 -
-  name: тропа
+  name: я┌я─п╬п©п╟
   desc: 
   mp:   POLYLINE 0x2A 0 0
   fig:  2 1 2 1  0 7 80 -1 -1 2.000 1 2 0 0 0 0
 -
-  name: сухая канава
+  name: я│я┐я┘п╟я▐ п╨п╟п╫п╟п╡п╟
   desc: 
   mp:   POLYLINE 0x2B 0 0
   fig:  2 1 2 1 26 7 90 -1 -1 2.000 1 1 0 0 0 0
