use libyaml instead of libsyck

--- a/libzn-utils/SConscript
+++ b/libzn-utils/SConscript
@@ -1,12 +1,12 @@
 Import ('env')
 
 mapsoft_libs = Split ("zn geo_io geo loaders jeeps fig mp utils 2d")
-other_libs   = Split ("usb tiff jpeg png gd syck")
+other_libs   = Split ("usb tiff jpeg png gd yaml")
 
 env1 = env.Clone()
 env1.Prepend(LIBS=[mapsoft_libs,other_libs])
-env1.Program(['mapsoft_vmap.cpp', '../yaml/yaml.cpp'])
-env1.Program(['zn_mkfiglib.cpp', '../yaml/yaml.cpp'])
+env1.Program('mapsoft_vmap.cpp')
+env1.Program('zn_mkfiglib.cpp')
 
 
 env2 = env.Clone()
