programs/SConscript: fix lib order

--- a/programs/SConscript
+++ b/programs/SConscript
@@ -16,14 +16,14 @@ env_geo.Program('mapsoft_convert', 'mapsoft_convert.cpp')
 # le.Program('mapsoft_imgview', 'mapsoft_imgview.cpp')
 env_geo.Program('mapsoft_mapcnv', 'mapsoft_mapcnv.cpp')
 env_geo.Program('mapsoft_mapcnv1', 'mapsoft_mapcnv1.cpp')
-env_geo.Program('mapsoft_getks.cpp',     LIBS=['curl', mapsoft_libs,other_libs])
-env_geo.Program('mapsoft_getks_ll.cpp',  LIBS=['curl', mapsoft_libs,other_libs])
-env_geo.Program('mapsoft_getks_nom.cpp',  LIBS=['curl', mapsoft_libs,other_libs])
-env_geo.Program('mapsoft_getgoogle.cpp', LIBS=['curl', mapsoft_libs,other_libs])
+env_geo.Program('mapsoft_getks.cpp',     LIBS=[mapsoft_libs, other_libs, 'curl'])
+env_geo.Program('mapsoft_getks_ll.cpp',  LIBS=[mapsoft_libs, other_libs, 'curl'])
+env_geo.Program('mapsoft_getks_nom.cpp',  LIBS=[mapsoft_libs, other_libs, 'curl'])
+env_geo.Program('mapsoft_getgoogle.cpp', LIBS=[mapsoft_libs, other_libs, 'curl'])
 env_geo.Program('mapsoft_mkmap.cpp')
 env_geo.Program('mapsoft_ref.cpp')
 env_geo.Program('mapsoft_toxyz.cpp')
-env_geo.Program('mapsoft_map2fig.cpp', LIBS=['curl', mapsoft_libs, other_libs])
+env_geo.Program('mapsoft_map2fig.cpp', LIBS=[mapsoft_libs, other_libs, 'curl'])
 env_geo.Program('mapsoft_srtm2fig.cpp')
 env_geo.Program('mapsoft_fig2fig.cpp')
 env_geo.Program('mapsoft_calc_nom2ll.cpp')
