libgeo: Brought geo_refs.h code to geo_refs.cpp programs/Sconscript: Some tuning for successfull compilation

--- a/libgeo/SConscript
+++ b/libgeo/SConscript
@@ -4,6 +4,7 @@ env.Library('geo', \
 	geo_convs.cpp
 	geo_data.cpp
 	geo_types.cpp
+   geo_refs.cpp
      """))
 
 convs_libs=Split("geo loaders jeeps utils 2d png jpeg tiff")
