--- a/programs/SConscript
+++ b/programs/SConscript
@@ -3,7 +3,7 @@ env_gtk = env.Clone()
 env_geo = env.Clone()
 
 mapsoft_libs = Split ("geo_io geo loaders jeeps fig mp utils 2d")
-other_libs   = Split ("usb tiff jpeg png gd")
+other_libs   = Split ("usb tiff jpeg png gd curl")
 
 env_gtk.Prepend(LIBS=["viewer", mapsoft_libs,other_libs])
 env_gtk.ParseConfig('pkg-config --cflags --libs gtkmm-2.4,gthread-2.0')
@@ -12,18 +12,18 @@ env_geo.Prepend(LIBS=[mapsoft_libs,other_libs])
 
 
 env_geo.Program('mapsoft_add2fig.cpp')
-env_geo.Program('mapsoft_convert.cpp', LIBS=[mapsoft_libs, other_libs, 'curl'])
+env_geo.Program('mapsoft_convert.cpp')
 # le.Program('mapsoft_imgview', 'mapsoft_imgview.cpp')
 env_geo.Program('mapsoft_mapcnv', 'mapsoft_mapcnv.cpp')
 env_geo.Program('mapsoft_mapcnv1', 'mapsoft_mapcnv1.cpp')
-env_geo.Program('mapsoft_getks.cpp',     LIBS=[mapsoft_libs, other_libs, 'curl'])
-env_geo.Program('mapsoft_getks_ll.cpp',  LIBS=[mapsoft_libs, other_libs, 'curl'])
-env_geo.Program('mapsoft_getks_nom.cpp',  LIBS=[mapsoft_libs, other_libs, 'curl'])
-env_geo.Program('mapsoft_getgoogle.cpp', LIBS=[mapsoft_libs, other_libs, 'curl'])
+env_geo.Program('mapsoft_getks.cpp')
+env_geo.Program('mapsoft_getks_ll.cpp')
+env_geo.Program('mapsoft_getks_nom.cpp')
+env_geo.Program('mapsoft_getgoogle.cpp')
 env_geo.Program('mapsoft_mkmap.cpp')
 env_geo.Program('mapsoft_ref.cpp')
 env_geo.Program('mapsoft_toxyz.cpp')
-env_geo.Program('mapsoft_map2fig.cpp', LIBS=[mapsoft_libs, other_libs, 'curl'])
+env_geo.Program('mapsoft_map2fig.cpp')
 env_geo.Program('mapsoft_srtm2fig.cpp')
 env_geo.Program('mapsoft_fig2fig.cpp')
 env_geo.Program('mapsoft_calc_nom2ll.cpp')
