programs/SConscript: fix install rule

--- a/programs/SConscript
+++ b/programs/SConscript
@@ -44,7 +44,7 @@ env_gtk.Program('mapsoft_mapview.cpp')
 #env_gtk.Program('mapsoft_googleview', 'mapsoft_googleview.cpp')
 #env_gtk.Program('mapsoft_ksview', 'mapsoft_ksview.cpp')
 
-env.Alias('install', '/usr/bin/')
+env.Alias('install', ['/usr/bin/', '/usr/share/man/man1/'])
 env.Install('/usr/bin/', ['mapsoft_mapview', 'mapsoft_convert'])
 env.Install('/usr/share/man/man1/', ['mapsoft_convert.1'])
 
