fix bigmap library and examples

--- a/bigmap/Makefile
+++ b/bigmap/Makefile
@@ -1,9 +1,8 @@
-CPPFLAGS = -O1 -I../utils
-LDFLAGS = -ltiff -ljpeg 
+CPPFLAGS = -O1 -I../loaders -I../lib2d
+LDFLAGS = -L../lib2d -L../loaders
+LDLIBS = -lloaders -l2d -ltiff -ljpeg libbm.o
 
-all: map4
-
-map4: map4.cpp libbm.o
+all: map4 map6
 
 clean:
 	rm *.o
