--- a/znaki2/Makefile
+++ b/znaki2/Makefile
@@ -1,19 +1,24 @@
 all: make_map_gk get_legend get_print fig2pnm make_nom np2pt tx2pt
 
-MAPSOFT_LIBS = ../libzn/libzn.a ../libgeo_io/libgeo_io.a ../libgeo/libgeo.a ../jeeps/libjeeps.a ../loaders/libloaders.a -lpng -ljpeg -ltiff -lusb ../yaml/yaml.cpp -lsyck ../libfig/libfig.a ../libmp/libmp.a ../utils/libutils.a ../lib2d/lib2d.a
+LDFLAGS= -L../libzn -L../libgeo_io -L../libgeo -L../jeeps \
+         -L../loaders -L../libfig -L../libmp -L../utils -L../lib2d
+LDLIBS= -lzn -lgeo_io -lgeo -ljeeps -lloaders\
+        -lpng -ljpeg -ltiff -lusb -lyaml -lcurl\
+        -lfig -lmp -lutils -l2d -lgd
+
 
 CPPFLAGS=-I../ -g
 
-make_map_gk: $(MAPSOFT_LIBS)
-make_nom:    $(MAPSOFT_LIBS)
-make_nom2:    $(MAPSOFT_LIBS)
+make_map_gk:
+make_nom:
+make_nom2:
 
-fig2pnm:     ../utils/pnm_shifter.cpp $(MAPSOFT_LIBS)
+fig2pnm:     ../utils/pnm_shifter.cpp
 pnm_cnt:     ../utils/pnm_shifter.cpp
 
-get_print:   $(MAPSOFT_LIBS)
-np2pt:       $(MAPSOFT_LIBS)
-tx2pt:       $(MAPSOFT_LIBS)
+get_print:
+np2pt:
+tx2pt:
 
-get_legend:  $(MAPSOFT_LIBS)
-get_text:    $(MAPSOFT_LIBS)
+get_legend:
+get_text:
