--- a/libzn-data/mmb.cnf
+++ b/libzn-data/mmb.cnf
@@ -519,4 +519,7 @@
   fig:  2 1 2 1 26 7 90 -1 -1 2.000 1 1 0 0 0 0
 
  
-
+-
+  name: bad route
+  mp:   POLYLINE 0x0A 0 0
+  fig:  2 1 1 1 20987968 7 80 -1 -1 4.000 0 0 -1 0 0 0
