--- a/bigmap/Makefile
+++ b/bigmap/Makefile
@@ -1,6 +1,6 @@
 CPPFLAGS = -O1 -I../loaders -I../lib2d
 LDFLAGS = -L../lib2d -L../loaders
-LDLIBS = -lloaders -l2d -ltiff -ljpeg libbm.o
+LDLIBS = -lloaders -l2d -ltiff -ljpeg -lpng libbm.o
 
 all: map4 map6
 
