libmp:  * Put some map and object parameters into Options object  * Convert all such parameters to/from utf on read/write  * Unknown parameters will also be read/written  * add program mp_test for read/write tests

--- a/libmp/SConscript
+++ b/libmp/SConscript
@@ -6,3 +6,6 @@ env.Library('mp', \
         mp_mask.cpp
         mp_data.cpp
      """))
+
+libs=Split("mp utils 2d")
+env.Program("mp_test.cpp",  LIBS=[libs])
