--- a/libzn-data/mmb.cnf
+++ b/libzn-data/mmb.cnf
@@ -51,6 +51,7 @@
   mp:   POI 0x2C0B 0 0
   fig:  2 1 0 1 11 7 157 -1 -1 0.000 0 1 -1 0 0 1 
   pic:  cerkov.fig
+  txt:  4 0 0 40 -1 3 8 0.0000 4
 -
   name: остановка автобуса
   mp:   POI 0x2F08 0 0
