--- a/programs/SConscript
+++ b/programs/SConscript
@@ -13,6 +13,7 @@ env_geo.Prepend(LIBS=[mapsoft_libs,other_libs])
 
 env_geo.Program('mapsoft_add2fig.cpp')
 env_geo.Program('mapsoft_convert.cpp')
+env_geo.Program('mapsoft_pt2map.cpp')
 # le.Program('mapsoft_imgview', 'mapsoft_imgview.cpp')
 env_geo.Program('mapsoft_mapcnv', 'mapsoft_mapcnv.cpp')
 env_geo.Program('mapsoft_mapcnv1', 'mapsoft_mapcnv1.cpp')
