--- a/gred/Makefile
+++ b/gred/Makefile
@@ -4,7 +4,8 @@ LDLIBS= -l2d `pkg-config --libs gtkmm-2.4,gthread-2.0`
 
 CPPFLAGS=-I../ `pkg-config --cflags gtkmm-2.4`
 
-all: simple_viewer_test mthread_viewer_test
+all: simple_viewer_test mthread_viewer_test1 mthread_viewer_test2
 
 simple_viewer_test: simple_viewer.h gplane.h
-mthread_viewer_test: mthread_viewer.h gplane.h
+mthread_viewer_test1: mthread_viewer.h gplane.h
+mthread_viewer_test2: mthread_viewer.h gplane.h
