--- a/gred/Makefile
+++ b/gred/Makefile
@@ -1,8 +1,8 @@
-LDFLAGS= -L../lib2d
+LDFLAGS= -L../core/lib2d
 LDLIBS= -l2d `pkg-config --libs gtkmm-2.4,gthread-2.0`
 
 
-CPPFLAGS=-I../ `pkg-config --cflags gtkmm-2.4`
+CPPFLAGS=`pkg-config --cflags gtkmm-2.4`
 
 all: simple_viewer_test1 simple_viewer_test2\
       mthread_viewer_test1 mthread_viewer_test2
