--- a/libzn-utils/SConscript
+++ b/libzn-utils/SConscript
@@ -9,7 +9,7 @@ env1.Prepend(LIBS=[mapsoft_libs,other_libs])
 env1.Program('mapsoft_vmap.cpp')
 env1.Program('zn_mkfiglib.cpp')
 
-env1.Program(['fig2pnm.cpp', '../utils/pnm_shifter.o'])
+env1.Program(['fig2pnm.cpp', '../core/utils/pnm_shifter.o'])
 
 env1.Program('get_legend.cpp')
 env1.Program('get_print.cpp')
