fix includes in moved programs

--- a/viewer/SConscript
+++ b/viewer/SConscript
@@ -1,12 +1,21 @@
 Import ('env')
 le = env.Clone()
+
+mapsoft_libs = Split ("geo_io geo loaders jeeps fig mp utils 2d")
+other_libs   = Split ("usb tiff jpeg png gd curl")
+le.Prepend(LIBS=[mapsoft_libs,other_libs])
 le.ParseConfig('pkg-config --cflags --libs gtkmm-2.4,gthread-2.0')
 
-le.Library("viewer", \
-    Split ("""
+cpp_files = Split ("""
 	generic_dialog.cpp
 	action_manager.cpp
 	viewer.cpp
 	workplane.cpp
-    """))
+        """)
+
+le.Library("viewer", cpp_files)
+
+le.Program("mapsoft_mapview", ["mapsoft_mapview.cpp", cpp_files])
+#env_gtk.Program('mapsoft_googleview', 'mapsoft_googleview.cpp')
+#env_gtk.Program('mapsoft_ksview', 'mapsoft_ksview.cpp')
 
