--- a/core/utils/SConscript
+++ b/core/utils/SConscript
@@ -7,6 +7,7 @@ env.Library('utils', \
     m_time.cpp m_color.cpp
     log.cpp
     iconv_utils.cpp spirit_utils.cpp
+    image_gd.cpp
     pnm_shifter.cpp
     strvec.cpp
   """))
